--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			 <exclusions>
+        		<exclusion>
+          			<groupId>org.springframework.boot</groupId>
+          			<artifactId>spring-boot-starter-logging</artifactId>
+        		</exclusion>
+      		</exclusions>
 		</dependency>
 
 		<dependency>
@@ -39,7 +45,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -49,6 +61,17 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.12</version>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
