--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
 
+#springmvc for jsp templates
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+
+#MVC
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
 test = abc
 
 #mysql configuration
