--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
 test = abc
 
+spring.freemarker.suffix=.html
+spring.freemarker.template-loader-path=classpath:/static/
+
 #mysql configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone = GMT&amp&useUnicode=true&amp&characterEncoding=UTF-8
 spring.datasource.username=root
