--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 			<!-- </exclusions> -->
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+    		<groupId>com.alibaba</groupId>
+    		<artifactId>fastjson</artifactId>
+    		<version>1.2.47</version>
+		</dependency>
+		
 		<!-- testing module -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
